--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
             <div class="text">
                 <h1>İpek Kurabiye</h1>
-                <p>Pasta, kurabiye, kekler, çikolatalar, yemekler yapıyorum.</p>
+                <p>Pasta, kurabiye, kekler, çikolatalar</p>
             </div>
 
             <div class="images">
@@ -40,7 +40,7 @@
                 <img src="assets/orn3.jpeg" alt="ÖrnekResim">
             </div>
             <div class="text">
-                <p>Daha fazla çalışmamı görmek isterseniz aşağıya kaydırın.</p>
+                <p>Daha fazlası için aşağıya kaydırın.</p>
             </div>
         </div>
         <hr>
