--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
         </div>
         <div class="contact" id="iletisim">
-            <h1>Bana buradan ulaşabilirsiniz.</h1>
+            <h1>İletişim</h1>
             <div class="socialhandle">
                 <div class="socials">
                     <button id="social"><a target="_blank" href="https://www.instagram.com/ipekkurabiye/"><i
