--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
           <h1 id="circletext">Ipek Kurabiye</h1>
         </div>
       </div>
-      <div class="buttons" id="buttons">
+      <!-- <div class="buttons" id="buttons">
         <a id="hak" href="index.html#rest">Hakkımda</a>
         <a href="index.html#galeri">Galeri</a>
         <a href="index.html#iletisim">İletişim</a>
-      </div>
+      </div> -->
     </div>
-    <hr />
+
     <div class="rest" id="rest">
       <div class="img">
         <img src="assets/profil.jpg" alt="Profil" />
@@ -35,15 +35,15 @@
       </div>
 
       <div class="images">
-        <img src="assets/orn1.jpeg" alt="ÖrnekResim" />
-        <img src="assets/orn2.jpeg" alt="ÖrnekResim" />
-        <img src="assets/orn3.jpeg" alt="ÖrnekResim" />
+        <img class="spawn" src="assets/orn1.jpeg" alt="ÖrnekResim" />
+        <img class="spawn" src="assets/orn2.jpeg" alt="ÖrnekResim" />
+        <img class="spawn" src="assets/orn3.jpeg" alt="ÖrnekResim" />
       </div>
       <div class="text">
         <p>Daha fazlası için aşağıya kaydırın.</p>
       </div>
     </div>
-    <hr />
+
     <div class="gallery" id="galeri">
       <h1>Galeri</h1>
       <div class="images1">
@@ -65,15 +65,23 @@
       <h1>İletişim</h1>
       <div class="socialhandle">
         <div class="socials">
-          <button id="social">
-            <a target="_blank" href="https://www.instagram.com/ipekkurabiye/"><i
-                class="fa-brands fa-square-instagram"></i> ipekkurabiye</a>
+          <button id="social" class="spawn2">
+            <a target="_blank" href="https://www.instagram.com/ipekkurabiye/">
+              <i class="fa-brands fa-square-instagram"></i>
+              <p>ipekkurabiye</p>
+            </a>
           </button>
-          <button id="social">
-            <a href="tel:+905356220712"><i class="fa-solid fa-phone"></i> 0535 622 0712</a>
+          <button id="social" class="spawn2"> 
+            <a href="tel:+905356220712">
+              <i class="fa-solid fa-phone"></i>
+              <p>0535 622 0712</p> 
+            </a>
           </button>
-          <button id="social">
-            <a href="mailto:ipekkurabiye@gmail.com"><i class="fa-solid fa-envelope"></i> ipekkurabiye@gmail.com</a>
+          <button id="social" class="spawn2">
+            <a href="mailto:ipekkurabiye@gmail.com">
+              <i class="fa-solid fa-envelope"></i>
+              <p>ipekkurabiye@gmail.com</p>
+            </a>
           </button>
         </div>
       </div>
